# HU-Vision-1617-Base

./: .gitignore  CMakeLists.txt
implementatieplannen/working/: adsf.txt  plan-edge-detection.org  plan-greyscale.tex  plan-scaling.org  plan-scaling.tex
meetrapporten/working/: meetrapportbilinear.org  meetrapportbilinear.tex  quality.odt  quality.org  rapport-cacheability.tex  rapport-speed.tex
source/ExternalDLL/ExternalDLL/: DLLExecution.cpp  DefaultExtraction.cpp  DefaultLocalization.cpp  HereBeDragons.cpp  ImageFactory.cpp  ImageFactory.h  ImageIO.cpp  IntensityImagePrivate.cpp  IntensityImageStudent.cpp  IntensityImageStudent.h  Main.cpp  Point2D.h  PostProcessing.cpp  RGBImagePrivate.cpp  RGBImageStudent.cpp  RGBImageStudent.h  RGBToIntensity.cpp  Representation.cpp  StudentPreProcessing.cpp  StudentPreProcessing.h  export.cpp
